# notification-api

./: LICENSE  README.md  pyproject.toml
app/: main.py  notification.py
app/serializers/: telegram.py
app/tasks/: notify_telegram.py  task_telegram.py
