[tool.poetry]
name = "Telegram-api"
version = "0.1.0"
description = ""
authors = ["FernandoCelmer <email@fernandocelmer.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
fastapi = "^0.115.12"
pydantic = "^2.11.4"
mangum = "^0.19.0"
uvicorn = "^0.34.2"
dotflow = "^0.12.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
